[package]
name = "rust-spiders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 基础依赖
log = "0.4"
structopt = {version = "0.3"}
walkdir = "2"
sha2 = "0.10"
hex = "0.4.3"
hex-literal = "0.4.1"
run_script = "0.10.1"
cfg-if = "1.0.0"
lazy_static = "1.4.0"
md5 = "0.7"
anyhow_ext = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip", "native-tls-vendored", "stream","multipart"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.104"
flate2 = "1.0"
rand = "0.8.5"
aes-gcm = "0.10.3"
base64 = "0.21.5"
once_cell = "1.5.3"
chrono = "0.4.26"
regex = "1.10.2"
clap = {version = "4.4.7", features = ["derive"]}
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
askama = { version = "0.12", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.3.0"